apps/www/app/globals.css
@import 'tailwindcss';
@source "../../../apps/**/*.{ts,tsx}";
@source "../../../components/**/*.{ts,tsx}";
@source "../../../packages/**/*.{ts,tsx}";
@source "./**/*.{ts,tsx,mdx}";
@source "../**/*.{ts,tsx,mdx}";
@source "./(playground)/**/*.{ts,tsx,mdx}";

@import 'tw-animate-css';
@plugin 'tailwind-scrollbar';

@custom-variant dark (&:is(.dark *));

@import 'fumadocs-ui/css/black.css';
@import 'fumadocs-ui/css/preset.css';

@source '../node_modules/fumadocs-ui/dist/**/*.js';

:root {
  --background: oklch(1 0 0);

  --foreground: oklch(0.145 0 0);

  --card: oklch(1 0 0);

  --card-foreground: oklch(0.145 0 0);

  --popover: oklch(1 0 0);

  --popover-foreground: oklch(0.145 0 0);

  --primary: oklch(0.145 0 0);

  --primary-foreground: oklch(0.985 0 0);

  --secondary: oklch(0.97 0 0);

  --secondary-foreground: oklch(0.205 0 0);

  --muted: oklch(0.97 0 0);

  --muted-foreground: oklch(0.556 0 0);

  --accent: oklch(0.97 0 0);

  --accent-foreground: oklch(0.205 0 0);

  --color-fd-accent: oklch(0.97 0 0);

  --color-fd-accent-foreground: oklch(0.205 0 0);

  --destructive: oklch(0.577 0.245 27.325);

  --destructive-foreground: hsl(0 0% 98%);

  --border: oklch(0.922 0 0);

  --input: oklch(0.922 0 0);

  --ring: oklch(0.708 0 0);

  --chart-1: oklch(0.646 0.222 41.116);

  --chart-2: oklch(0.6 0.118 184.704);

  --chart-3: oklch(0.398 0.07 227.392);

  --chart-4: oklch(0.828 0.189 84.429);

  --chart-5: oklch(0.769 0.188 70.08);

  --radius: 0.625rem;

  --sidebar: oklch(0.985 0 0);

  --sidebar-foreground: oklch(0.145 0 0);

  --sidebar-primary: oklch(0.205 0 0);

  --sidebar-primary-foreground: oklch(0.985 0 0);

  --sidebar-accent: oklch(0.922 0 0);

  --sidebar-accent-foreground: oklch(0.205 0 0);

  --sidebar-border: oklch(0.922 0 0);

  --sidebar-ring: oklch(0.708 0 0);

  --color-fd-primary: oklch(0 0 0);
}

.dark {
  --background: oklch(0.145 0 0);

  --foreground: oklch(0.985 0 0);

  --card: oklch(0.205 0 0);

  --card-foreground: oklch(0.985 0 0);

  --popover: oklch(0.205 0 0);

  --popover-foreground: oklch(0.985 0 0);

  --primary: oklch(0.985 0 0);

  --primary-foreground: oklch(0.145 0 0);

  --secondary: oklch(0.269 0 0);

  --secondary-foreground: oklch(0.985 0 0);

  --muted: oklch(0.269 0 0);

  --muted-foreground: oklch(0.708 0 0);

  --accent: oklch(0.269 0 0);

  --accent-foreground: oklch(0.985 0 0);

  --color-fd-accent: oklch(0.269 0 0);

  --color-fd-accent-foreground: oklch(0.985 0 0);

  --destructive: oklch(0.704 0.191 22.216);

  --destructive-foreground: hsl(0 0% 98%);

  --border: oklch(1 0 0 / 10%);

  --input: oklch(1 0 0 / 15%);

  --ring: oklch(0.556 0 0);

  --chart-1: oklch(0.488 0.243 264.376);

  --chart-2: oklch(0.696 0.17 162.48);

  --chart-3: oklch(0.769 0.188 70.08);

  --chart-4: oklch(0.627 0.265 303.9);

  --chart-5: oklch(0.645 0.246 16.439);

  --sidebar: oklch(0.205 0 0);

  --sidebar-foreground: oklch(0.985 0 0);

  --sidebar-primary: oklch(0.488 0.243 264.376);

  --sidebar-primary-foreground: oklch(0.985 0 0);

  --sidebar-accent: oklch(0.269 0 0);

  --sidebar-accent-foreground: oklch(0.985 0 0);

  --sidebar-border: oklch(1 0 0 / 10%);

  --sidebar-ring: oklch(0.556 0 0);

  --color-fd-primary: oklch(1 0 0);
}

@theme inline {
  --breakpoint-xs: 30rem;

  --color-background: var(--background);

  --color-foreground: var(--foreground);

  --color-card: var(--card);

  --color-card-foreground: var(--card-foreground);

  --color-popover: var(--popover);

  --color-popover-foreground: var(--popover-foreground);

  --color-primary: var(--primary);

  --color-primary-foreground: var(--primary-foreground);

  --color-secondary: var(--secondary);

  --color-secondary-foreground: var(--secondary-foreground);

  --color-muted: var(--muted);

  --color-muted-foreground: var(--muted-foreground);

  --color-accent: var(--accent);

  --color-accent-foreground: var(--accent-foreground);

  --color-destructive: var(--destructive);

  --color-destructive-foreground: var(--destructive-foreground);

  --color-border: var(--border);

  --color-input: var(--input);

  --color-ring: var(--ring);

  --color-chart-1: var(--chart-1);

  --color-chart-2: var(--chart-2);

  --color-chart-3: var(--chart-3);

  --color-chart-4: var(--chart-4);

  --color-chart-5: var(--chart-5);

  --radius-sm: calc(var(--radius) - 4px);

  --radius-md: calc(var(--radius) - 2px);

  --radius-lg: var(--radius);

  --radius-xl: calc(var(--radius) + 4px);

  --color-sidebar: var(--sidebar);

  --color-sidebar-foreground: var(--sidebar-foreground);

  --color-sidebar-primary: var(--sidebar-primary);

  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);

  --color-sidebar-accent: var(--sidebar-accent);

  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);

  --color-sidebar-border: var(--sidebar-border);

  --color-sidebar-ring: var(--sidebar-ring);

  --breakpoint-3xl: 1670px;
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }

  body {
    @apply bg-background text-foreground;
    overscroll-behavior: none;
  }

  /* Hide scrollbar but keep functionality */
  html {
    scrollbar-width: none; /* Firefox */
    -ms-overflow-style: none; /* IE and Edge */
  }

  html::-webkit-scrollbar {
    display: none; /* Chrome, Safari, Opera */
  }

  #nd-sidebar {
    @apply md:!border-0;
  }

  #nd-sidebar div div div a[href^='/docs/components'] > svg[data-icon='true'],
  #nd-sidebar div div div a[href^='/docs/primitives'] > svg[data-icon='true'],
  #nd-sidebar div div div a[href^='/docs/icons'] > svg[data-icon='true'],
  #nd-sidebar div div div a + div[data-state='open'] {
    @apply !hidden;
  }

  #nd-docs-layout {
    @apply relative 3xl:!w-full 3xl:!mx-auto 3xl:!max-w-[1670px];
  }

  #nd-page article {
    @apply max-2xl:max-w-[860px] !pt-23 3xl:!ml-[262px] 2xl:!max-w-[1124px];
  }

  #nd-page {
    @apply !pt-0 2xl:!max-w-none;
  }

  #nd-toc {
    @apply !pb-18 !pt-24;
  }

  #nd-toc div div {
    @apply !pl-px;
  }

  #nd-toc div[role='none'] {
    @apply !w-[3px] !rounded-full -ml-px;
  }

  #nd-tocnav {
    @apply !hidden;
  }

  #docs-body h1,
  #docs-body h2,
  #docs-body h3,
  #docs-body h4,
  #docs-body h5,
  #docs-body h6 {
    @apply !font-medium;
  }

  @keyframes blink {
    50% {
      opacity: 0.6;
    }
  }
}

.screenshot-mode #nd-sidebar,
.screenshot-mode #nd-toc,
.screenshot-mode #nd-page article > *:not(#docs-body),
.screenshot-mode #nd-page #docs-body > *:not(#component-preview),
.screenshot-mode #component-preview-tab-list {
  opacity: 0 !important;
}

